# swapfiets_dwh

./: .gitignore  README.md  create_duckdb.py  dbt_project.yml  profiles.yml  pyproject.toml
models/core/: dim_customers.sql  dim_customers.yml  dim_subscriptions.sql  dim_subscriptions.yml  fct_actions.sql  fct_actions.yml
models/data_marts/: mrt_enriched_customer_data.sql  mrt_enriched_customer_data.yml
models/sources/data_lake/: core.yml
seeds/core/: dim_countries.csv  dim_countries.yml
