[tool.poetry]
name = "dbt-template"
version = "0.1.0"
description = ""
authors = ["Joris van Raaij <82571322+joris-swapfiets@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.9"
dbt-duckdb = "^1.9.1"
duckdb = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
